--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -1,6 +1,34 @@
 /* ==========================================================================
    Masthead
    ========================================================================== */
+#console {
+    background-color: #000;
+    border-radius: 5px;
+    font-family: courier, monospace;
+    color: #fff;
+    width:700px;
+    height: 350px;
+    position:center; 
+    margin-left:auto;
+    margin-right:auto;
+    margin-top:-55px;
+    margin-bottom:-10px;
+    font-size:15px;
+}
+#console > a {
+    color: #0bc;
+    text-decoration: none;
+}
+#console > #a {
+    color: #0f0;
+}
+#console > #c {
+    color: #0bc;
+}
+#console > #b {
+    color: #ff0096;
+}
+
 
 .masthead {
   margin-top: 40px;
@@ -49,8 +77,8 @@
     }
 
     @include media($large) {
-      width: 200px;
-      height: 200px;
+      width: 165px;
+      height: 165px;
       @include rounded(200px); /* crops in a circle */
     }
   }
@@ -61,7 +89,9 @@
    ========================================================================== */
 
 .site-title {
+  margin-top: -10px;
   margin-bottom: 0;
+  font-family: $alt-font;
   @include animation-duration(1s);
   @include animation-delay(.75s);
 
