--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -22,17 +22,30 @@
       <div class="entry-content">
         {{ content }}
       </div><!-- /.entry-content -->
+            <div id="console"></div>
+
     </div><!-- /.entry-wrapper -->
-  </article>
+  </article> 
 </div><!-- /#main -->
 
-<div class="footer-wrapper">
+    <div class="footer-wrapper">
   <footer role="contentinfo" class="entry-wrapper">
     {% include footer.html %}
   </footer>
 </div><!-- /.footer-wrapper -->
 
 {% include scripts.html %}
-
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script src="/assets/js/console.js"></script>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-610661-7']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </body>
 </html>
