--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,7 +4,9 @@
 
 .footer-wrapper {
   @include clearfix;
-  margin: 2em auto;
+  margin: 2em 1em;
+  margin-top: 10px;
+  margin-bottom: -20px;
   text-align: center;
   font-family: $alt-font;
   @include font-size(14);
@@ -21,7 +23,7 @@
    ========================================================================== */
 
 .social-icons {
-  margin: 1em 0 2em;
+  margin: 1em 0 -3em;
 
   a {
     padding: 4px 8px;
