--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -34,6 +34,9 @@
   </footer>
 </div><!-- /.footer-wrapper -->
 
+
+ {% include google_analytics.html %}
+<script src="{{site.baseurl}}/assets/js/jquery.fitvids.js"></script>
 {% include scripts.html %}
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script src="/assets/js/console.js"></script>
