--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,6 +31,9 @@
   </footer>
 </div><!-- /.footer-wrapper -->
 
+
+{% include google_analytics.html %}
+<script src="{{site.baseurl}}/assets/js/jquery.fitvids.js"></script>
 {% include scripts.html %}
 
 </body>
