--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -81,7 +81,7 @@ span + .entry-title {
 
 .entry-title {
 	font-family: $alt-font;
-	font-style:italic;
+	/*font-style:italic;*/
 	@include font-size(36,yes,36);
 	font-weight: 400;
 	line-height: 1;
@@ -189,7 +189,14 @@ span + .entry-title {
 
 .entry-content {
 	@include span-columns(12);
+        font: 0.9em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;
+        color: #555;
+        float: left;
+width: 100%;
+margin: 0 0 20px 0;
+padding: 0 0 5px 0;
 
+font-size: 1em;
 	p:first-child {
 		margin-top: 0;
 	}
@@ -201,11 +208,12 @@ span + .entry-title {
 	/* nice link underlines */
   p > a,
 	li > a {
-		border-bottom: 1px dotted lighten($link-color, 50);
-
-		&:hover {
+		/*border-bottom: 1px dotted lighten($link-color, 50);*/
+                 color: #4e2a8e;
+                 /*text-decoration: underline;*/
+		/*&:hover {
 			border-bottom-style: solid;
-		}
+		}*/
 	}
 }
 
