--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -12,7 +12,7 @@
     vertical-align: top;
     margin: 0 0 50px;
     padding: 4px 20px;
-    /*background-color: $black;*/
+    background-color: $black;
 
     @include media($medium) {
       width: auto;
@@ -30,17 +30,17 @@
     @include font-size(24,no);
     text-transform: uppercase;
     font: 0.9em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;
-    color: #aaa;
-    /*color: $white;*/
+    /*color: #aaa;*/
+    color: $white;
 
     @include media($medium) {
       @include font-size(16,no);
     }
 
-   /* a:hover {
+   a:hover {
       @include box-shadow($shadow: inset 0 0 1px $white);
     }
-    */
+
   }
 
   a {
@@ -53,14 +53,14 @@
       padding: 6px 10px;
     }
 
-    /*color: $black;*/
-    color: #4e2a8e;
+    color: $white;
+    /*color: #4e2a8e;*/
     @include rounded(4px);
 
-    /*&:hover {
+    &:hover {
       background-color: lighten($black, 10);
     }
-    */
+
   }
 
 }
