--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,9 @@
           <h1 class="entry-title">{% if page.headline %}{{ page.headline }}{% else %}{{ page.title }}{% endif %}</h1>
         {% endif %}
           <time datetime="{{ page.date | date_to_xmlschema }}"><i class="fa fa-calendar-o"></i> {{ page.date | date: "%B %d, %Y" }}</time></span>
+          {% if page.timeread%}
+          <h1 class="entry-tags">{{ page.timeread }} read</h1>
+          {% endif %}
           <ul class="entry-tags">
             {% for tag in page.tags %}<li><a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}">#{{ tag }}</a></li>{% endfor %}
           </ul>
