--- a/_sass/_archives.scss
+++ b/_sass/_archives.scss
@@ -14,13 +14,20 @@
   padding: 0;
   list-style-type: none;
   color: #4e2a8e;
+  font-size: 16px;
+
 
   li {
-    padding: 8px 0;
-    border-bottom: 1px solid lighten($black,80);
-    border-bottom: 1px solid rgba($black,.10);
-    @include font-size(18,no);
-    @include clearfix;
+    padding: 9px 0;
+    border-bottom: .5px dotted;
+    //@include font-size(25,no);
+    font-size:1.4rem;
+    //margin: 5px 10 20px 10;
+    //padding: 5px 0 10px 0;
+    line-height: 1.5;
+    font-weight: 700;
+    margin-bottom: .2 rem;
+
 
     > a {
       border-bottom-width: 0; /* remove underlines from items in post indexes */
@@ -29,31 +36,45 @@
 
   a > span {
     float: right;
+    margin: 5px 10 20px 10;
+    padding: 5px 0 10px 0;
   }
 
   .entry-date {
-    @include font-size(14,no);
-    text-transform: uppercase;
-    display: none;
+    //@include font-size(16,no);
+    //text-transform: uppercase;
+    font-size: 1rem;
+    color: grey;
+    margin-bottom: .2rem;
+    display: block;
+    font-weight: 700;
+    display: block;
 
-    @include media($medium) {
-      display: inline;
-    }
+    /*@include media($medium) {
+      display: block;
+    }*/
   }
 
   /* post excerpt */
   .excerpt {
     display: block;
     float: none;
-    @include font-size(14, no, 16);
+    //@include font-size(14, no, 16);
+    font-size: 1.2rem;
+    margin: 5px 10 20px 10;
+    padding: 5px 0 10px 0;
+    font-weight: normal;
+    color: #3d3d3d;
+    line-height: 1.5;
+    width: 100%;
 
-    @include media($medium) {
-      width: 70%;
+    /*@include media($medium) {
+      width: 80%;
     }
 
     @include media($large) {
-      width: 60%;
-    }
+      width: 80%;
+    }*/
   }
 }
 
