--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,12 +7,12 @@
    ========================================================================== */
 
 ::-moz-selection {
-	background-color: lighten($base-color, 65%);
+	background-color: #fff;
 	color: $base-color;
 	text-shadow: none;
 }
 ::selection {
-	background-color: lighten($base-color, 65%);
+	background-color: #fff;
 	color: $base-color;
 	text-shadow: none;
 }
