--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -92,8 +92,8 @@
   margin-top: -10px;
   margin-bottom: 0;
   font-family: $alt-font;
-  @include animation-duration(1s);
-  @include animation-delay(.75s);
+  //@include animation-duration(1s);
+  //@include animation-delay(.75s);
 
   a {
     color: $black;
@@ -110,8 +110,8 @@
   @include font-size(16);
   font-weight: 400;
   font-style: italic;
-  @include animation-duration(1s);
-  @include animation-delay(1s);
+  //@include animation-duration(1s);
+  //@include animation-delay(1s);
 
   @include media($medium) {
     @include font-size(20);
