--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -4,7 +4,7 @@
 
 .navigation-wrapper {
   text-align: center;
-  @include clearfix;
+  //@include clearfix;
 
   ul {
     display: inline-block;
@@ -12,14 +12,14 @@
     vertical-align: top;
     margin: 0 0 50px;
     padding: 4px 20px;
-    background-color: $black;
+    /*background-color: $black;*/
 
     @include media($medium) {
       width: auto;
       @include rounded(0 0 10px 10px);
     }
 
-    @include clearfix;
+    //@include clearfix;
   }
 
   li {
@@ -29,17 +29,17 @@
     text-align: center;
     @include font-size(24,no);
     text-transform: uppercase;
-    font: 0.9em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;
-    /*color: #aaa;*/
-    color: $white;
-
-    @include media($medium) {
+    font-family: Cinzel;
+    color: #aaa;
+    /*color: $white;*/
+    font-size: 1.2rem;
+    /*@include media($medium) {
       @include font-size(16,no);
-    }
+    }*/
 
-   a:hover {
+   /*a:hover {
       @include box-shadow($shadow: inset 0 0 1px $white);
-    }
+    }*/
 
   }
 
@@ -53,14 +53,15 @@
       padding: 6px 10px;
     }
 
-    color: $white;
+    /*color: $white;*/
     /*color: #4e2a8e;*/
+    color: #000000;
     @include rounded(4px);
 
-    &:hover {
+    /*&:hover {
       background-color: lighten($black, 10);
     }
-
+*/
   }
 
 }
@@ -72,13 +73,13 @@
 #site-nav {
   display: none;
   z-index: 5;
-
+/*
   @include media($medium) {
     -webkit-animation-duration: 1s;
     -moz-animation-duration: 1s;
     -o-animation-duration: 1s;
     animation-duration: 1s;
-  }
+  }*/
 
   &.closed {
 
