--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -7,35 +7,21 @@
    ========================================================================== */
 
 #main {
-	@include clearfix;
+	//@include clearfix;
 }
 
 .entry,
 .hentry {
-	@include clearfix;
-	border-bottom: 1px solid lighten($black,80);
-	border-bottom: 1px solid rgba($black,.10);
+	//@include clearfix;
+	//border-bottom: 1px solid lighten($black,80);
+	//border-bottom: 1px solid rgba($black,.10);
 }
 
-/* feature image */
-
-.entry-feature-image {
-	margin: 20px 0 0;
-	width: 100%;
-
-	@include media($medium) {
-		margin-top: -85px; /* move up to be overlapped by site logo */
-	}
-
-	@include media($large) {
-		margin-top: -145px; /* move up further to be overlapped by site logo */
-	}
-}
 
 /* page header */
 
 .entry-header {
-	@include fill-parent;
+	//@include fill-parent;
  text-align: center;
 }
 
@@ -81,29 +67,67 @@ span + .entry-title {
 
 .entry-title {
 	/*font-family: $alt-font;*/
-	font: 0.9em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;
+	font-family: -apple-system,BlinkMacSystemFont,Verdana,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 	/*text-transform: uppercase;*/
 	/*font-style:italic;*/
 	text-align: center;
-	@include font-size(25,yes,10);
-	font-weight: 100;
+	//@include font-size(25,yes,10);
+	font-size: 3.80rem;
+	font-weight: bold;
 	line-height: 1;
 	letter-spacing: -2px;
-  margin: -10px;
+  	margin: -10px;
+  	margin-bottom: 10px;
+	a {
+		color: $black;
+		text-decoration: underline;
+	}
+/*
+	@include media($medium) {
+		//@include font-size(16,yes,14);
+		font-size: 3.80rem;
+	}
+
+	@include media($large) {
+		//@include font-size(68,yes,72);
+		font-size: 3.80rem;
+	}
+	*/
+}
+
+.entry-title2 {
+	font-family: -apple-system,BlinkMacSystemFont,Verdana,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+	text-align: left;
+	font-size: 2rem;
+	font-weight: 700;
+	padding: .5rem 0;
+	margin: 0;
+	color: #3d3d3d;
+	line-height: 1.5;
+	//letter-spacing: -2px;
+  	margin-bottom: -1.5rem;
 	a {
 		color: $black;
 		text-decoration: underline;
 	}
 
-	@include media($medium) {
-		@include font-size(12,yes,14);
-	}
-
-	@include media($large) {
-		@include font-size(68,yes,72);
-	}
 }
 
+.entry-date {
+    //@include font-size(16,no);
+    //text-transform: uppercase;
+    font-size: 1rem;
+    text-align: left;
+    color: grey;
+    margin-bottom: .2rem;
+    display: block;
+    font-weight: 700;
+    display: block;
+
+    /*@include media($medium) {
+      display: block;
+    }*/
+  }
 /* page/post wrapper */
 
 .entry-wrapper {
@@ -117,7 +141,7 @@ span + .entry-title {
 /* page/post meta content (date, author, etc) */
 
 .entry-meta {
-	@include span-columns(12);
+	//@include span-columns(12);
 	text-transform: uppercase;
 	@include font-size(14);
 
@@ -191,10 +215,8 @@ span + .entry-title {
 /* main content block */
 
 .entry-content {
-        /*font: 0.9em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;*/
 
-  font-family: 'PT Serif', serif;
-    /*font-family: 'Crimson Text', serif;*/
+  font-family: -apple-system,BlinkMacSystemFont,Verdana,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 		margin: 0;
     line-height: 1.5;
         /*color: #555;*/
@@ -222,7 +244,7 @@ span + .entry-title {
 }
 
 .entry-content2 {
-        font: 0.9em/1.692307em 'Bitter', Georgia, 'Times New Roman', Times, serif;
+        font: -apple-system,BlinkMacSystemFont,Verdana,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 
   /*font-family: 'PT Serif', serif;*/
     /*font-family: 'Crimson Text', serif;*/
@@ -281,7 +303,7 @@ padding: 5px 0 1px 0;
 #page {
 
 	.entry-wrapper {
-		max-width: em(760);
+		max-width: 800px;
 	}
 
 	.entry-title {
